--- a/notebooks/mnist_datasets_demo.ipynb
+++ b/notebooks/mnist_datasets_demo.ipynb
@@ -51,7 +51,7 @@
     "from torchvision.datasets.mnist import MNIST\n",
     "\n",
     "# from custom package\n",
-    "from src.utils import MNISTDatasets\n",
+    "from src.utils import MNISTDatasets, mnist_raw_transform\n",
     "\n",
     "torch.manual_seed(518)"
    ]
